Fixed stretch out link for  the nav logo

--- a/frontend/src/components/Navigation/Navbar.scss
+++ b/frontend/src/components/Navigation/Navbar.scss
@@ -13,11 +13,14 @@
 .nav_logo {
     height: 55px;
     transform: rotate(-20deg);
+    width: fit-content;
     :hover {
         cursor:pointer;
     }
+}
 
-
+.nav_logo__container {
+    width: fit-content;
 }
 
 .nav__right__section {
